[metadata]
name = aiidalab_code_setup
version = 0.1.0
description = Package for the AiiDAlab code install and plugin setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-code-setup
author = Jusong Yu
author_email = jusong.yu@epfl.ch
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/aiidalab/aiidalab-code-setup#readme

[options]
packages = find:
install_requires =
    aiida-core~=2.0
    filelock~=3.3.0
python_requires = >=3.7

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1

[aiidalab]
title = Simulation code install and setup
description = Perform install the simulation code and setup AiiDA plugin
categories =
    quantum

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab_code_setup/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {version}